--- a/.github/workflows/render-rmarkdown.yaml
+++ b/.github/workflows/render-rmarkdown.yaml
@@ -14,4 +14,4 @@ jobs:
         uses: actions/checkout@v2
         
       - name: build report
-        run: make all
+        run: make analysis/penguins.html
